commit translated contents

--- a/docs/visual-basic/misc/bc30004.md
+++ b/docs/visual-basic/misc/bc30004.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30004
 ms.assetid: 592fb00e-7c4a-4d0b-84bf-a844296925dd
-ms.openlocfilehash: 81a931965ccdc8e20ce2f52705ec73499ad6ffa2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e7be85592dc368ba5382db5064bba0c4353332e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64650676"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84382068"
 ---
 # <a name="character-constant-must-contain-exactly-one-character"></a>La costante carattere deve contenere esattamente un carattere
 Una costante carattere non è valida perché contiene più di un carattere o un carattere null (tutti i bit sono zero).  
@@ -25,4 +25,4 @@ Una costante carattere non è valida perché contiene più di un carattere o un 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipo di dati Char](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [Tipo di dati Char](../language-reference/data-types/char-data-type.md)
