--- a/docs/visual-basic/misc/bc30038.md
+++ b/docs/visual-basic/misc/bc30038.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non ammette operandi di tipo Object per l'operatore '<operatorname>'
+title: Option Strict On non impedisce gli operandi di tipo Object per l'operatore ' <operatorname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30038
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30038
 ms.assetid: eb047d36-1fb4-460d-ae98-c76f31a89bed
-ms.openlocfilehash: dce17a1e9de548c978037d783e1904af0eb76a5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a39eef1a78911a091e4558065aa923b98f48a451
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606452"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381965"
 ---
-# <a name="option-strict-on-prohibits-operands-of-type-object-for-operator-operatorname"></a>Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'
+# <a name="option-strict-on-prohibits-operands-of-type-object-for-operator-operatorname"></a>Option Strict On non impedisce gli operandi di tipo Object per l'operatore ' \<operatorname> '
 Gli unici operatori definiti per le variabili oggetto sono `Is` e `TypeOf...Is`. Quando `Option Strict` è `On`, tutti gli operandi devono essere di tipi di dati definiti per l'operatore specificato.  
   
  **ID errore:** BC30038  
@@ -25,6 +25,6 @@ Gli unici operatori definiti per le variabili oggetto sono `Is` e `TypeOf...Is`.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore Is](../../visual-basic/language-reference/operators/is-operator.md)
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [Operatore Is](../language-reference/operators/is-operator.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
