--- a/docs/visual-basic/misc/bc30049.md
+++ b/docs/visual-basic/misc/bc30049.md
@@ -1,5 +1,5 @@
 ---
-title: "'<statementname>' istruzione richiede una matrice"
+title: <statementname>l'istruzione '' richiede una matrice
 ms.date: 07/20/2015
 f1_keywords:
 - bc30049
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30049
 ms.assetid: 294ce09c-49f9-4f78-b0eb-8bae51ea9a1c
-ms.openlocfilehash: d0a6abfb855a8f07c731f481cd6bdc9d63299aed
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2191df9fb2174cbca9bca36e0944f00980aa3c3a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625296"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381420"
 ---
-# <a name="statementname-statement-requires-an-array"></a>'\<nomeistruzione >' istruzione richiede una matrice
+# <a name="statementname-statement-requires-an-array"></a>\<statementname>l'istruzione '' richiede una matrice
 Le istruzioni `Erase` e `ReDim` richiedono i tipi di dati della matrice. Il tipo fornito non è una matrice.  
   
  **ID errore:** BC30049  
@@ -25,6 +25,6 @@ Le istruzioni `Erase` e `ReDim` richiedono i tipi di dati della matrice. Il tipo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Erase](../../visual-basic/language-reference/statements/erase-statement.md)
-- [Istruzione ReDim](../../visual-basic/language-reference/statements/redim-statement.md)
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Istruzione Erase](../language-reference/statements/erase-statement.md)
+- [Istruzione ReDim](../language-reference/statements/redim-statement.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
