--- a/docs/visual-basic/misc/bc30071.md
+++ b/docs/visual-basic/misc/bc30071.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30071
 ms.assetid: 9a4f8ccb-717a-4d18-91b4-4a373202c38a
-ms.openlocfilehash: 26ed4c0c044665b0a0a8aadfa56feed593cd3741
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 137cd47c01f34219ea264b28d7ab0d7b729ae684
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622310"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381173"
 ---
 # <a name="case-else-can-only-appear-inside-a-select-case-statement"></a>'Case Else' può essere specificato solo all'interno di un'istruzione 'Select Case'
 Un'istruzione `Case Else` si verifica al di fuori di un blocco `Select` . Un'istruzione `Case Else` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.  
@@ -25,4 +25,4 @@ Un'istruzione `Case Else` si verifica al di fuori di un blocco `Select` . Un'ist
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
