--- a/docs/visual-basic/misc/bc30906.md
+++ b/docs/visual-basic/misc/bc30906.md
@@ -1,5 +1,5 @@
 ---
-title: <procedurename1>Impossibile eseguire <procedurename2> l'override perché si differenziano per i parametri dichiarati come ' ParamArray '
+title: <procedurename1> non può eseguire l'override di <procedurename2> perché si differenziano per i parametri dichiarati come 'ParamArray'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30906
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC30906
 ms.assetid: 12939030-732e-4c6d-8fe9-707b7532174b
-ms.openlocfilehash: 329a4f2e5e7d310c4340f162b4b0d41d2e5cc3aa
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 90e6cf561ca0132f0ee680c8eb457047b870d894
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667055"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408263"
 ---
-# <a name="procedurename1-cannot-override-procedurename2-because-they-differ-by-parameters-declared-paramarray"></a>\<nomeroutine1 > non può \<eseguire l'override di nomeroutine2 > perché si differenziano per i parametri dichiarati ' ParamArray '
+# <a name="procedurename1-cannot-override-procedurename2-because-they-differ-by-parameters-declared-paramarray"></a>\<procedurename1> non può eseguire l'override di \<procedurename2> perché si differenziano per i parametri dichiarati come 'ParamArray'
 Una routine in una classe derivata esegue l'override di una routine con nome identico nella classe base, ma gli elenchi di parametri sono diversi.  
   
- Per eseguire l'override di una routine in una classe ereditata, tale routine deve corrispondere ai relativi elenco di parametri, livello di accesso e qualsiasi eventuale tipo restituito. In particolare, deve corrispondere a qualsiasi dichiarazione [facoltativa](../../visual-basic/language-reference/modifiers/optional.md) o [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) .  
+ Per eseguire l'override di una routine in una classe ereditata, tale routine deve corrispondere ai relativi elenco di parametri, livello di accesso e qualsiasi eventuale tipo restituito. In particolare, deve corrispondere a qualsiasi dichiarazione [facoltativa](../language-reference/modifiers/optional.md) o [ParamArray](../language-reference/modifiers/paramarray.md) .  
   
  **ID errore:** BC30906  
   
@@ -25,9 +25,9 @@ Una routine in una classe derivata esegue l'override di una routine con nome ide
   
 - Per eseguire l'override della routine, rendere l'elenco di parametri esattamente uguale all'elenco di parametri della routine della classe base. Se nella routine della classe base l'ultimo parametro viene dichiarato inserendo `ParamArray` , dichiarare `ParamArray` anche per l'ultimo parametro della routine di override.  
   
-- Se si vuole un elenco di parametri diverso rispetto alla versione della classe base, non sarà possibile eseguirne l'override. Sarà tuttavia possibile eseguirne l'overload. Per altre informazioni, vedere [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md).  
+- Se si vuole un elenco di parametri diverso rispetto alla versione della classe base, non sarà possibile eseguirne l'override. Sarà tuttavia possibile eseguirne l'overload. Per altre informazioni, vedere [Procedure Overloading](../programming-guide/language-features/procedures/procedure-overloading.md).  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
+- [Override](../language-reference/modifiers/overrides.md)
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
