--- a/docs/visual-basic/misc/bc36709.md
+++ b/docs/visual-basic/misc/bc36709.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente la riduzione in conversioni implicite tra il metodo di estensione '<extensionmethodname>'definito '<modulename>'e delegato'<delegatename>'
+title: Option Strict On non consente la riduzione in conversioni implicite di tipi tra il metodo di estensione ' <extensionmethodname> ' definito in ' <modulename> ' e il delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36709
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36709
 ms.assetid: 95d8c833-3525-411b-98e8-b7d3f61f75c9
-ms.openlocfilehash: b0877748722185de520245423548d1eb4064ac1d
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 61c97f7d21c30ef1f079313d5546f8382a2253cf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913128"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411213"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a>Option Strict On non consente la riduzione in conversioni implicite tra il metodo di estensione '\<nomemetodoestensione >' definito in '\<NomeModulo >' e il delegato '\<NomeDelegato >'
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-extension-method-extensionmethodname-defined-in-modulename-and-delegate-delegatename"></a>Option Strict On non consente la riduzione in conversioni implicite di tipi tra il metodo di estensione ' \<extensionmethodname> ' definito in ' \<modulename> ' e il delegato ' \<delegatename> '
 Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo dal tipo di dati di un parametro a un delegato nel parametro corrispondente parametro di un metodo di estensione assegnato a una variabile di quel tipo di delegato. Il tipo di dati del parametro del delegato deve ampliarsi nel tipo di dati del metodo di estensione.  
   
  **ID errore:** BC36709  
@@ -25,7 +25,7 @@ Con `Option Strict` non è possibile avere una conversione verso un tipo di dati
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Conversione di tipo relaxed del delegato](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [Delegati](../../visual-basic/programming-guide/language-features/delegates/index.md)
-- [Conversioni di ampliamento e restrizione](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Conversione di tipo relaxed del delegato](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [Delegati](../programming-guide/language-features/delegates/index.md)
+- [Widening and Narrowing Conversions](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
