--- a/docs/visual-basic/misc/bc40034.md
+++ b/docs/visual-basic/misc/bc40034.md
@@ -1,5 +1,5 @@
 ---
-title: Il membro 'MustOverride' non conforme a CLS non è consentito in un conforme a CLS <classname>
+title: Il membro 'Mustoverride' non conforme a CLS non è consentito in una  conforme a CLS<classname>
 ms.date: 07/20/2015
 f1_keywords:
 - bc40034
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC40034
 ms.assetid: 4eb36b3a-1bbe-4e99-9ecb-a12b8729b128
-ms.openlocfilehash: a9c26d5c959066499f940483634867d41ca970bd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d5b570ec2aee1bf95d1aed62fbac24d3fa00d7e9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624373"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384222"
 ---
-# <a name="non-cls-compliant-mustoverride-member-is-not-allowed-in-a-cls-compliant-classname"></a>Il membro 'MustOverride' non conforme a CLS non è consentito in un conforme a CLS \<classname >
+# <a name="non-cls-compliant-mustoverride-member-is-not-allowed-in-a-cls-compliant-classname"></a>Il membro 'Mustoverride' non conforme a CLS non è consentito in una  conforme a CLS\<classname>
 Un classe è contrassegnata come `<CLSCompliant(True)>`, ma contiene una proprietà o routine `MustOverride` che è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.  
   
- Quando una classe è conforme con la [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), un'applicazione che usa quella classe accede soltanto ai membri che sono contrassegnati anche come `<CLSCompliant(True)>` e ignora i membri che non sono. Tuttavia, l'applicazione non può ignorare una proprietà o routine `MustOverride` perché deve accedervi per eseguirne l'override.  
+ Quando una classe è conforme all'indipendenza del linguaggio e a CLS ( [Language-independent Components](../../standard/language-independence-and-language-independent-components.md) ), un'applicazione che utilizza tale classe accede solo ai membri che sono anche contrassegnati come `<CLSCompliant(True)>` e ignora i membri che non lo sono. Tuttavia, l'applicazione non può ignorare una proprietà o routine `MustOverride` perché deve accedervi per eseguirne l'override.  
   
  Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità. L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.  
   
@@ -37,4 +37,4 @@ Un classe è contrassegnata come `<CLSCompliant(True)>`, ma contiene una proprie
   
 ## <a name="see-also"></a>Vedere anche
 
-- [MustOverride](../../visual-basic/language-reference/modifiers/mustoverride.md)
+- [MustOverride](../language-reference/modifiers/mustoverride.md)
