--- a/docs/visual-basic/misc/bc40038.md
+++ b/docs/visual-basic/misc/bc40038.md
@@ -1,5 +1,5 @@
 ---
-title: '@No__t_0 dello spazio dei nomi radice non è conforme a CLS'
+title: Lo spazio dei nomi radice <namespacename> non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40038
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC40038
 ms.assetid: ec850295-b2fe-4f19-b808-d22fe0aaa32d
-ms.openlocfilehash: 90ead358cf9b32e2b2348ca45afa57da7d33c5e6
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: be640bfc5309d66d36f7cd05fa722b52dc49e5cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72769910"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384170"
 ---
-# <a name="root-namespace-namespacename-is-not-cls-compliant"></a>Lo spazio dei nomi radice \<namespacename > non è conforme a CLS
+# <a name="root-namespace-namespacename-is-not-cls-compliant"></a>Lo spazio dei nomi radice \<namespacename> non è conforme a CLS
 Un assembly è contrassegnato come `<CLSCompliant(True)>`, ma il nome dello spazio dei nomi radice inizia con un carattere di sottolineatura (`_`).  
   
- Un elemento di programmazione può contenere uno o più caratteri di sottolineatura, ma deve essere conforme all' [indipendenza del linguaggio e ai componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), non deve iniziare con un carattere di sottolineatura. Vedere [Declared Element Names](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md).  
+ Un elemento di programmazione può contenere uno o più caratteri di sottolineatura, ma deve essere conforme all' [indipendenza del linguaggio e ai componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), non deve iniziare con un carattere di sottolineatura. Vedere [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md).  
   
  Quando <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità. L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.  
   
@@ -35,8 +35,8 @@ Un assembly è contrassegnato come `<CLSCompliant(True)>`, ma il nome dello spaz
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [Spazi dei nomi in Visual Basic](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [-rootnamespace](../../visual-basic/reference/command-line-compiler/rootnamespace.md)
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [Convenzioni di denominazione Visual Basic](../../visual-basic/programming-guide/program-structure/naming-conventions.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
+- [Spazi dei nomi in Visual Basic](../programming-guide/program-structure/namespaces.md)
+- [-rootnamespace](../reference/command-line-compiler/rootnamespace.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Convenzioni di denominazione di Visual Basic](../programming-guide/program-structure/naming-conventions.md)
