--- a/docs/visual-basic/misc/bc42016.md
+++ b/docs/visual-basic/misc/bc42016.md
@@ -1,5 +1,5 @@
 ---
-title: La conversione implicita da '<typename1>'a'<typename2>'
+title: Conversione implicita da' <typename1> ' a' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42016
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42016
 ms.assetid: 7dabaab0-8258-4c17-927f-28e61f50bd3a
-ms.openlocfilehash: 8682a511bf0510b81299a0ac6f27160f424ece18
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 26e413146641d6e1b17ec715aba6bd1bfaf9ea9d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384066"
 ---
-# <a name="implicit-conversion-from-typename1-to-typename2"></a>La conversione implicita da '\<NomeTipo1 >' a '\<in NomeTipo2 >'
+# <a name="implicit-conversion-from-typename1-to-typename2"></a>Conversione implicita da' \<typename1> ' a' \<typename2> '
 Un'espressione o un'istruzione di assegnazione accetta un valore di un tipo di dati e lo converte in un altro tipo. Dato che non viene usata alcuna parola chiave, la conversione è *implicita*.  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
@@ -23,11 +23,11 @@ Un'espressione o un'istruzione di assegnazione accetta un valore di un tipo di d
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se possibile, usare i valori dello stesso tipo di dati, in modo che Visual Basic non è necessario eseguire alcuna conversione.  
+- Se possibile, usare valori dello stesso tipo di dati, in modo che Visual Basic non debba eseguire alcuna conversione.  
   
 - Usare `CType` o una delle altre parole chiave di conversione affinché la conversione sia *esplicita*.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni implicite ed esplicite](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [Conversioni implicite ed esplicite](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
