--- a/docs/visual-basic/misc/bc30037.md
+++ b/docs/visual-basic/misc/bc30037.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30037
 ms.assetid: bc34e427-f3fa-43a7-bbf6-2e608c9d2494
-ms.openlocfilehash: 632480b6e1122f46bf873580d6c4fcf7fa1e7a17
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: cdeb1879f81b946f662f00f029010277c7a288c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61933588"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381978"
 ---
 # <a name="character-is-not-valid"></a>Carattere non valido
 Il contesto corrente non supporta il carattere. Ad esempio, una tilde (`~`) o una barra verticale (`|`) non può essere inclusa nel nome di un elemento dichiarato.  
@@ -27,4 +27,4 @@ Il contesto corrente non supporta il carattere. Ad esempio, una tilde (`~`) o un
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
