--- a/docs/visual-basic/misc/bc30040.md
+++ b/docs/visual-basic/misc/bc30040.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30040
 ms.assetid: 27df3488-de77-499d-b9a6-08037d540cb0
-ms.openlocfilehash: 946dffd38215117365e4f8f20ee5b3ad8b8d302c
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ee97cc0b764a98ab0b5bffc4775c939e2ebfbc0e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61933536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381874"
 ---
 # <a name="first-statement-of-a-method-body-cannot-be-on-the-same-line-as-the-method-declaration"></a>La prima istruzione del corpo di un metodo non può essere sulla stessa riga della dichiarazione del metodo
 Un'istruzione `Function`, `Sub`, `Get`, `Set`o `Property` non deve essere accompagnata da altre istruzioni in una riga del codice sorgente.  
@@ -29,5 +29,5 @@ Un'istruzione `Function`, `Sub`, `Get`, `Set`o `Property` non deve essere accomp
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [Procedura: etichettare le istruzioni](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
+- [Procedura: Etichettare le istruzioni](../programming-guide/program-structure/how-to-label-statements.md)
