--- a/docs/visual-basic/misc/bc30065.md
+++ b/docs/visual-basic/misc/bc30065.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30065
 ms.assetid: d6426861-ba64-4dca-9100-262c6c058bd9
-ms.openlocfilehash: e030a0d0d794f8aedc35a341e25150102114b963
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f6752c71e6ad763e2f8933f562d040866c2cfddb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622267"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381368"
 ---
 # <a name="exit-sub-is-not-valid-in-a-function-or-property"></a>'Exit Sub' non è valido in Function o Property
 `Exit Sub` viene visualizzato in una routine `Function` o `Property` . Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.  
@@ -25,6 +25,6 @@ ms.locfileid: "64622267"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
