--- a/docs/visual-basic/misc/bc30074.md
+++ b/docs/visual-basic/misc/bc30074.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30074
 ms.assetid: e805a517-228a-4147-a2c0-9dba93d3ba42
-ms.openlocfilehash: c857676b42d09df4eacb7f9bcabce1debaf9fb0f
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 60f06205db9a33808b6952ed9e8e319cdbe73a48
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69658680"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381017"
 ---
 # <a name="constant-cannot-be-the-target-of-an-assignment"></a>La costante non può essere la destinazione di un'assegnazione
 Una costante si trova in un contesto che le assegna un valore. Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.  
@@ -25,5 +25,5 @@ Una costante si trova in un contesto che le assegna un valore. Solo alle variabi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Costanti ed enumerazioni](../../visual-basic/programming-guide/language-features/constants-enums/index.md)
+- [Costanti ed enumerazioni](../programming-guide/language-features/constants-enums/index.md)
 - [Operatori di assegnazione (Visual Basic)](../language-reference/operators/assignment-operators.md)
