--- a/docs/visual-basic/misc/bc30748.md
+++ b/docs/visual-basic/misc/bc30748.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile convertire '<type>'
+title: Non è possibile convertire in ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30748
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30748
 ms.assetid: a9923b24-d6b5-4d2d-8396-d778537e02d8
-ms.openlocfilehash: 3c770feea7f728c23671dd84fc4555f6f770ac6d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4f46364bb3290b91f8954b5e7448a694d572f8e9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646088"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412585"
 ---
-# <a name="cannot-convert-to-type"></a>Impossibile convertire '\<tipo >'
+# <a name="cannot-convert-to-type"></a>Non è possibile convertire in ' \<type> '
 È stata tentata una conversione non valida.  
   
  **ID errore:** BC30748  
@@ -25,4 +25,4 @@ ms.locfileid: "64646088"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
