--- a/docs/visual-basic/misc/bc30755.md
+++ b/docs/visual-basic/misc/bc30755.md
@@ -1,5 +1,5 @@
 ---
-title: "' GoTo <labelname>' non è valido perché '<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione"
+title: "'GoTo <labelname>' non è valida perché '<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30755
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30755
 ms.assetid: 95fb48c1-4982-45fc-81f0-f30cf0df173f
-ms.openlocfilehash: b274e80570fcc796135d5d3db4f7652587e682b4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c53a79d51ef7f9859a1f4b63fa4fc33502f8b244
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657403"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412520"
 ---
-# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a>' GoTo \<NomeEtichetta >' non è valido perché '\<NomeEtichetta >' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione
+# <a name="goto-labelname-is-not-valid-because-labelname-is-inside-a-synclock-statement-that-does-not-contain-this-statement"></a>'GoTo \<labelname>' non è valida perché '\<labelname>' si trova all'interno di un'istruzione 'SyncLock' che non contiene questa istruzione
 Non è consentito creare rami in un blocco `SyncLock` .  
   
  **ID errore:** BC30755  
@@ -25,4 +25,4 @@ Non è consentito creare rami in un blocco `SyncLock` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione SyncLock](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [Istruzione SyncLock](../language-reference/statements/synclock-statement.md)
