--- a/docs/visual-basic/misc/bc33008.md
+++ b/docs/visual-basic/misc/bc33008.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33008
 ms.assetid: 8c44456b-8fd2-4168-ad8c-b6da129242ba
-ms.openlocfilehash: fa76e4a9db465e5ed9662eecdc14c9e6bc596910
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d28f3ee0c7cd13d5e61e7a759df8a5c87c584eb8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657080"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385236"
 ---
 # <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a>'Exit Operator' non è valido. Usare 'Return' per uscire da un operatore
 Un'istruzione `Exit Operator` viene visualizzata in una routine `Operator` .  
   
- È necessario usare una [istruzione Return](../../visual-basic/language-reference/statements/return-statement.md) da restituire da un `Operator` procedure. Il [istruzione Exit](../../visual-basic/language-reference/statements/exit-statement.md) non accetta il `Operator` parola chiave e il `End Operator` istruzione non restituisce il controllo al codice chiamante.  
+ Per restituire una routine, è necessario utilizzare un' [istruzione return](../language-reference/statements/return-statement.md) `Operator` . L' [istruzione Exit](../language-reference/statements/exit-statement.md) non accetta la `Operator` parola chiave e l' `End Operator` istruzione non restituisce il controllo al codice chiamante.  
   
  **ID errore:** BC33008  
   
@@ -27,7 +27,7 @@ Un'istruzione `Exit Operator` viene visualizzata in una routine `Operator` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
